Chapter14/14-begin/edge-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
  template:
    spec:
      containers:
        - name: edge-service
          image: edge-service
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: edge-service-volume
              mountPath: /workspace/config
            - name: edge-service-volume-secret
              mountPath: /workspace/secrets/edge-service-secret
      volumes:
        - name: edge-service-volume
          configMap:
            name: edge-service
        - name: edge-service-volume-secret
          secret:
            secretName: edge-service
